# restful-with-fastapi-and-security-practice

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  database_guide.md  docker-compose.yml  frontend_examples.md  ngrok.yml  pyproject.toml  pytest.ini  requirements.txt  setu.py  test-ngrok-oauth.py  test_db_integration.py  test_summary.md  update-oauth-config.py
app/: config.py  crud.py  dependencies.py  main.py  models.py  security.py
app/api/v1/: auth_routes.py  user_routes.py
app/services/: database_service.py  oauth2_service.py  redis_service.py
prisma/: schema.prisma
prisma/migrations/20250905021125_add_oauth2_models/: migration.sql
tests/: conftest.py
tests/integration/: test_oauth_flow.py
tests/unit/: test_auth_routes.py  test_dependencies.py  test_oauth2_service.py  test_security.py
